k8s/aws/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deploy
  namespace: test
  labels:
    app: app-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-deploy
  template:
    metadata:
      labels:
        app: app-deploy
    spec:
      containers:
      - name: app
        image: 492804330065.dkr.ecr.us-east-1.amazonaws.com/thuan-ecr/test-ecr:v1
        ports:
        - containerPort: 5000
