k8s/aws/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: test
spec:
  selector:
    app: app-deploy
  ports:
  - name: app-port
    protocol: TCP
    port: 5000
    targetPort: 5000
  type: LoadBalancer
